--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "jade": "^1.11.0",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "wordpress": "^1.4.0"
   }
 }
