--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "node app.js"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
     "jade": "^1.11.0",
     "mocha": "^3.5.0",
     "nodemon": "^1.11.0",
+    "request": "^2.81.0",
     "wordpress": "^1.4.0"
   }
 }
