--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
 	"start": "nodemon app.js",
-    "test": "node app.js"
+    "test": "node app.js",
+    "sample": "json-server public/data/about.json --port 3030"
   },
   "repository": {
     "type": "git",
